# squid-manager

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  README_SQUID.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  squid.conf
docker/: Dockerfile
src/app/: bootstrap.py  main.py  web.py
src/app/application/schemas/: proxy_account.py
src/app/application/services/: expiration_scanner.py  proxy_account_service.py
src/app/core/: captcha.py  logging.py  security.py  settings.py
src/app/infrastructure/db/: session.py
src/app/infrastructure/db/models/: __init__.py  proxy_account.py
src/app/infrastructure/db/repositories/: proxy_account_repository.py
src/app/infrastructure/squid/: passwd_file.py
src/app/interfaces/http/: fastapi_app.py
src/app/interfaces/http/routers/: __init__.py  auth.py  health.py  pages.py  proxy_accounts.py
src/app/interfaces/http/static/: accounts.html  admin.html  app.css  app.js  login.html
src/app/interfaces/http/static/css/: accounts.css  admin-layout.css  common.css  login.css
src/app/interfaces/http/static/js/: accounts-view.js  accounts.js  admin-common.js  admin-layout.js  admin.js  login.js
