[project]
name = "squid-manager"
version = "0.1.0"
description = "FastAPI admin UI for managing Squid passwd accounts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "itsdangerous==2.2.0",
    "passlib==1.7.4",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.44",
    "uvicorn==0.34.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
